# Tiktok-song-recognizer

./: .gitignore  CMakeLists.txt  Readme.md
resources/: config.json  locales.json
src/: Entry.cpp
src/modules/: Logger.cpp  Logger.h
src/service/: Locale.hpp  Users.cpp  Users.h  utils-bot.hpp  utils.hpp
src/service/bot/: Bot.cpp  Bot.hpp  BotAsync.cpp  BotSync.cpp  BotThreading.hpp
src/service/bot/handler/: Event.hpp  EventExecutable.h  EventHandler.cpp  EventHandler.hpp  EventObject.hpp
src/service/bot/manager/: EventManager.hpp  EventWorker.hpp
src/service/config/: Config.hpp  ServicesConfig.hpp
src/service/events/: EventHi.hpp  EventLanguage.hpp  EventStart.hpp  EventTiktok.cpp  EventTiktok.hpp
utilities/: install-modules.sh
